# memury-card

./: .gitignore  Cargo.toml  README.md  main.json  release.sh  run.sh  settings.json
assets/: settings.json  settings_linux.json
assets/scary/windows/: background.bat
assets/tracker/: tr1.json  tr2.json
assets/trackers/: tracker.json
assets/windows/: install.bat  uninstall.bat
installer/: Cargo.toml  build.rs
installer/src/: main.rs
src/: helper.rs  main.rs  old.rs
src/linux/: helper.rs  mod.rs
src/service/: heavy.rs  mod.rs  service.rs  system.rs
src/windows/: helper.rs  mod.rs
testfiles/: old.txt  samplej.json
tracker/: samplej.json  tr1.json  tr2.json
