[package]
name = "installer"
description = ""
version = "0.1.0"
authors = [""]
license = "MIT"
repository = ""
documentation = ""
edition = "2018"
build = "build.rs"

[dependencies]
bitflags = "1.2"
err-derive = "0.3.0"
winapi = { version = "0.3.9", features = ["dbt", "std", "winbase", "winerror", "winsvc"] }
widestring = "0.4.0"
windows-service = "0.4.0"
argh = "0.1.7"

[build-dependencies]
winres = "0.1.12"
